--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "aos": "^2.3.4",
+    "formik": "^2.2.6",
     "react": "^17.0.1",
     "react-alice-carousel": "^2.3.0",
     "react-dom": "^17.0.1",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^4.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "react-spring": "^8.0.27",
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
