--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "aos": "^2.3.4",
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
     "formik": "^2.2.6",
+    "joi": "^17.3.0",
+    "nodemailer": "^6.4.17",
     "react": "^17.0.1",
     "react-alice-carousel": "^2.3.0",
     "react-dom": "^17.0.1",
@@ -16,11 +20,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
+    "react-toastify": "^7.0.2",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": " react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
