--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spinners": "^0.10.4",
     "react-spring": "^8.0.27",
     "react-toastify": "^7.0.2",
     "web-vitals": "^0.2.4",
